--- a/app/globals.css
+++ b/app/globals.css
@@ -73,3 +73,19 @@
     opacity: 0.25;
   }
 }
+
+/* styles.css or in a styled component */
+.animate-scroll {
+  display: flex;
+  overflow: hidden;
+  animation: scroll 20s linear infinite;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
